# rust_algos

./: .gitignore  Cargo.toml  README.md
algo_lib/: Cargo.toml
algo_lib/src/: lib.rs
algo_lib/tests/: best_reachable_tower.rs  bus_routes.rs  contest.rs  count_caesar_cipher_pairs.rs  count_residue_prefixes.rs  design-circular-queue.rs  design_auction_system.rs  design_front_middle_back_queue.rs  find_minimum_time_to_reach_last_room_i.rs  find_minimum_time_to_reach_last_room_ii.rs  find_nth_smallest_integer_with_k_one_bits.rs  guessing_game.rs  house_robber_v.rs  implement_trie_prefix_tree copy.rs  implement_trie_prefix_tree.rs  invert_binary_tree.rs  largest_even_number.rs  lexicographically_smallest_string_after_applying_operations.rs  lexicographically_smallest_string_after_deleting_duplicate_characters.rs  longest_strictly_increasing_subsequence_with_non_zero_bitwise_and.rs  max_binary_depth.rs  maximum_capacity_within_budget.rs  minimum_cost_path_with_edge_reversals.rs  minimum_cost_to_convert_string_i.rs  minimum_cost_to_make_two_binary_strings_equal.rs  minimum_edge_toggles_on_a_tree.rs  minimum_k_to_reduce_array_within_limit.rs  minimum_partition_score.rs  minimum_prefix_removal_to_make_array_strictly_increasing.rs  number-of-centered-subarrays.rs  number_of_alternating_xor_partitions.rs  number_of_prefix_connected_groups.rs  palindromic_path_queries_in_a_tree.rs  pythagorean_distance_nodes_in_a_tree.rs  reverse_letters_then_special_characters_in_a_string.rs  rotate_non_negative_elements.rs  search.rs  second_minimum_time_to_reach_destination.rs  (+7 more)
src/: main.rs
(+51 files in other folders)
