[workspace]
members = ["algo_lib", "patterns/worker"]

[package]
name = "rust_algos"
version = "0.1.0"
edition = "2021"

[dependencies]
algo_lib = { path = "algo_lib", default-features = false, features = ["sliding_window", "string", "helpers"] }

[profile.release]
# Optimize for small binary size
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
