[package]
name = "algo_lib"
version = "0.1.0"
edition = "2021"

[dependencies]

[features]
default = ["collections"]
collections = ["arr", "bounds", "dsu", "fenwick", "min_max", "segment_tree", "slice_ext", "sliding_window", "vec_ext", "link_cut"]
arr = []
bounds = []
dsu = []
fenwick = []
min_max = []
segment_tree = []
slice_ext = []
vec_ext = []
link_cur = []
sliding_window = []
string = []
helpers = []
payload = []
link_cut = ["payload"]

